sonarLint code smells remove